--- a/src/css/wazimap-ng-v1.webflow.css
+++ b/src/css/wazimap-ng-v1.webflow.css
@@ -3462,7 +3462,6 @@ label {
   font-size: 0.85em;
   font-weight: 500;
   text-decoration: none;
-  text-transform: capitalize;
   cursor: pointer;
 }
 
@@ -6373,13 +6372,13 @@ label {
   top: auto;
   right: 0%;
   bottom: 0%;
+  z-index: 999;
   min-height: 44px;
   margin-right: 50px;
   margin-bottom: 10px;
   border-radius: 4px;
   background-color: #fff;
   box-shadow: 0 0 0 -1px rgba(0, 0, 0, 0.2), 0 1px 6px -2px rgba(0, 0, 0, 0.3);
-  z-index: 999;
 }
 
 .mag-geo__dropdown_wrap {
@@ -6406,7 +6405,10 @@ label {
   right: 0%;
   bottom: 0%;
   z-index: 3;
-  display: none;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   width: 100vw;
   height: 100vh;
   -webkit-box-pack: center;
@@ -6418,6 +6420,10 @@ label {
   -ms-flex-align: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.5);
+}
+
+.warning-modal.hidden {
+  display: none;
 }
 
 .warning {
