--- a/src/css/webflow.css
+++ b/src/css/webflow.css
@@ -1807,6 +1807,7 @@ textarea.w-select {
 .w-condition-invisible {
   display: none !important;
 }
-#dev-tools {
-	z-index:200;
+
+.map-download{
+  z-index: 999;
 }
