chore: design changes logo and sources
remove sources section for now, will probably add this later again
update logo height to fix GCRO logo
add dev-tools css z-index

--- a/src/css/wazimap-ng-v1.webflow.css
+++ b/src/css/wazimap-ng-v1.webflow.css
@@ -5952,7 +5952,8 @@ label {
 }
 
 .profile-logo {
-  height: 100%;
+	margin: auto;
+	max-height: 100%;
 }
 
 .content {
@@ -7844,4 +7845,6 @@ label {
     align-self: end;
   }
 }
-
+#dev-tools {
+	z-index:200;
+}
