modified css propert

--- a/src/css/wazimap-ng-v1.webflow.css
+++ b/src/css/wazimap-ng-v1.webflow.css
@@ -8284,7 +8284,7 @@ label {
 
 @media print {
     .page-break-before {
-        page-break-before: always;
+        break-before: page;
     }
 }
 
