removed unnecessary elements from print

--- a/src/css/wazimap-ng-v1.webflow.css
+++ b/src/css/wazimap-ng-v1.webflow.css
@@ -8319,5 +8319,9 @@ label {
         float: none !important;
         display: block !important;
     }
+
+    .rich-data__print, .tab-notice{
+      display: none;
+    }
 }
 
