--- a/src/css/wazimap-ng-v1.webflow.css
+++ b/src/css/wazimap-ng-v1.webflow.css
@@ -7192,6 +7192,35 @@ label {
   display: none;
 }
 
+rich-data__print {
+   position: absolute;
+   left: auto;
+   top: 82px;
+   right: 12px;
+   bottom: auto;
+   display: -webkit-box;
+   display: -webkit-flex;
+   display: -ms-flexbox;
+   display: flex;
+   width: 40px;
+   height: 40px;
+   -webkit-box-pack: center;
+   -webkit-justify-content: center;
+   -ms-flex-pack: center;
+   justify-content: center;
+   -webkit-box-align: center;
+   -webkit-align-items: center;
+   -ms-flex-align: center;
+   align-items: center;
+   border-radius: 100px;
+   background-color: rgba(0, 0, 0, 0.06);
+   color: #333;
+ }
+
+ .rich-data__print:hover {
+   background-color: rgba(0, 0, 0, 0.1);
+ }
+
 @media screen and (max-width: 991px) {
   .rich-data-content {
     padding-top: 44px;
@@ -8423,6 +8452,10 @@ label {
     body, .main, .rich-data, .rich-data-content, .rich-data-content .section, .profile-indicator{
         float: none !important;
         display: block !important;
+    }
+
+    .rich-data__print, .tab-notice{
+      display: none;
     }
 }
 
