added hidden error box which can be triggered by the showPointError func in utils

--- a/src/css/wazimap-ng-v1.webflow.css
+++ b/src/css/wazimap-ng-v1.webflow.css
@@ -6753,7 +6753,19 @@ label {
 }
 
 .point-mapper-content__error {
+  display: none;
+  align-items: center;
   margin-bottom: 16px;
+  background-color: #f0f0f0;
+  padding: 5px;
+}
+
+.point-mapper-content__error .material-icons{
+  padding: 0px 5px;
+}
+
+.point-mapper-error__text{
+  flex-grow: 1;
 }
 
 .error {
