--- a/src/css/wazimap-ng-v1.webflow.css
+++ b/src/css/wazimap-ng-v1.webflow.css
@@ -3895,8 +3895,12 @@ label {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  padding-top: 8px;
-  padding-right: 10px;
+  width: 100%;
+  padding-top: 5px;
+  padding-bottom: 10px;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
 
@@ -3905,18 +3909,21 @@ label {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  width: 50%;
-  padding-bottom: 10px;
-  padding-left: 10px;
+  margin-right: 10px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
 }
 
 .mapping-options__filter.disabled {
   opacity: 0.4;
+  cursor: auto;
 }
 
 .mapping-options__filter_label {
@@ -3924,6 +3931,7 @@ label {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  width: 50%;
   margin-bottom: 4px;
   color: #999;
   font-size: 0.7em;
@@ -7098,6 +7106,10 @@ label {
   flex-direction: column;
 }
 
+.map-bottom-items.hidden {
+  display: none;
+}
+
 .map-bottom-items.export-clone{
   left: 50%;
   transform: translateX(-50%);
@@ -7413,6 +7425,113 @@ label {
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
+}
+
+.map-options__filter-row {
+  position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  padding-top: 5px;
+  padding-right: 46px;
+  padding-left: 10px;
+}
+
+.mapping-options__remove-filter {
+  position: absolute;
+  left: auto;
+  top: auto;
+  right: 10px;
+  bottom: 0%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 36px;
+  height: 36px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-align-self: flex-end;
+  -ms-flex-item-align: end;
+  align-self: flex-end;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+  border-radius: 3px;
+  background-color: rgba(0, 0, 0, 0.06);
+  color: #333;
+  cursor: pointer;
+}
+
+.mapping-options__remove-filter:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.mapping-options__remove-filter:active {
+  background-color: rgba(0, 0, 0, 0.06);
+}
+
+.mapping-options__remove-filter.is--hidden {
+  display: none;
+  background-color: rgba(0, 0, 0, 0.06);
+  color: #c5c5c5;
+  cursor: auto;
+}
+
+.map-options__filter-labels {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  padding-top: 5px;
+  padding-right: 46px;
+  padding-left: 10px;
+}
+
+.mapping-options__add-filter {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 36px;
+  margin-top: 10px;
+  margin-right: 10px;
+  margin-left: 10px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  border-radius: 3px;
+  background-color: rgba(0, 0, 0, 0.06);
+  color: #333;
+  font-size: 0.9em;
+  text-decoration: none;
+}
+
+.mapping-options__add-filter:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.mapping-options__add-filter:active {
+  background-color: rgba(0, 0, 0, 0.06);
 }
 
 @media screen and (max-width: 991px) {
