add tooltip html

--- a/src/css/wazimap-ng-v1.webflow.css
+++ b/src/css/wazimap-ng-v1.webflow.css
@@ -2032,6 +2032,7 @@ label {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
+  z-index: 9999;
 }
 
 .bar-chart__tooltip_alt-value {
@@ -8676,4 +8677,3 @@ label {
       display: none !important;
     }
 }
-
