--- a/src/css/wazimap-ng-v1.webflow.css
+++ b/src/css/wazimap-ng-v1.webflow.css
@@ -7531,6 +7531,218 @@ label {
   background-color: rgba(0, 0, 0, 0.06);
 }
 
+.profile-indicator__filters-wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 80%;
+  padding-top: 5px;
+  padding-bottom: 10px;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+
+.profile-indicator__filter-labels {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  padding-top: 5px;
+  padding-right: 83px;
+}
+
+.profile-indicator__filter-row {
+  position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  padding-top: 5px;
+}
+
+.profile-indicator__add-filter {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 36px;
+  margin-top: 10px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  border-radius: 3px;
+  background-color: rgba(0, 0, 0, 0.06);
+  color: #333;
+  text-decoration: none;
+}
+
+.profile-indicator__add-filter:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.profile-indicator__add-filter:active {
+  background-color: rgba(0, 0, 0, 0.06);
+}
+
+.profile-indicator__filter {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-right: 10px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
+
+.profile-indicator__filter.is--disabled {
+  opacity: 0.4;
+  cursor: auto;
+}
+
+.profile-indicator__filter_menu {
+  position: relative;
+  z-index: 10;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: stretch;
+  -webkit-align-items: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
+  font-size: 0.9em;
+}
+
+.profile-indicator__remove-filter {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 36px;
+  height: 36px;
+  margin-left: 5px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-align-self: flex-end;
+  -ms-flex-item-align: end;
+  align-self: flex-end;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+  border-radius: 3px;
+  background-color: rgba(0, 0, 0, 0.06);
+  color: #333;
+  cursor: pointer;
+}
+
+.profile-indicator__remove-filter:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.profile-indicator__remove-filter:active {
+  background-color: rgba(0, 0, 0, 0.06);
+}
+
+.profile-indicator__remove-filter.is--hidden {
+  display: none;
+  background-color: rgba(0, 0, 0, 0.06);
+  color: #c5c5c5;
+  cursor: auto;
+}
+
+.profile-indicator__new-filter {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 36px;
+  height: 36px;
+  margin-left: 5px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-align-self: flex-end;
+  -ms-flex-item-align: end;
+  align-self: flex-end;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+  border-radius: 3px;
+  background-color: rgba(0, 0, 0, 0.06);
+  color: #333;
+  cursor: pointer;
+}
+
+.profile-indicator__new-filter:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.profile-indicator__new-filter:active {
+  background-color: rgba(0, 0, 0, 0.06);
+}
+
+.profile-indicator__new-filter.is--hidden {
+  display: none;
+  background-color: rgba(0, 0, 0, 0.06);
+  color: #c5c5c5;
+  cursor: auto;
+}
+
+.profile-indicator__filter-buttons {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 93px;
+  margin-left: -5px;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+}
+
+.text-block-3 {
+  padding-right: 6px;
+}
+
 @media screen and (max-width: 991px) {
   .rich-data-content {
     padding-top: 44px;
