--- a/src/css/wazimap-ng-v1.webflow.css
+++ b/src/css/wazimap-ng-v1.webflow.css
@@ -7614,7 +7614,7 @@ label {
   flex: 1;
 }
 
-.profile-indicator__filter.is--disabled {
+.profile-indicator__filter.disabled {
   opacity: 0.4;
   cursor: auto;
 }
